2002-06-11  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST):  Don't list PACKAGES.

2002-05-14  Per Bothner  <per@bothner.com>

	* PACKAGES:  Remove obsolete file - now use GNU Java site instead.

2002-03-02  Per Bothner  <per@bothner.com>

	* kawa/Makefile.am:  Make $(SERVLET_SUBDIRS) before slib, since
	we moved HTTP.scm from gnu.kawa.servlet to slib.

2002-02-13  Per Bothner  <per@bothner.com>

	* blr/progfun.scm:  Move to gnu.kawa.brl.
	* brl/Makefile.am (java_SCM):  Update accordingly.

2002-01-29  Per Bothner  <per@bothner.com>

	* brl:  New directory - modules imported from BRL.
	* Makefile.am:  Update accordingly.

2002-01-23  Per Bothner  <per@bothner.com>

	* kawa/brl:  New directory.
	* kawa/Makefile.am (XML_SUBDIR):  Add 'brl'.

2001-11-18  Per Bothner  <per@bothner.com>

	* kawa/ant:  New directory.
	* kawa/Makefile.am (SUBDIRS):  Add ant.

2001-10-17  Per Bothner  <per@bothner.com>

	* kawa/Makefile.am:  Make kawa/xml, assuming --with-xml.

	* Makefile.am (SUBDIRS):  Make xml subdir earlier.

2001-07-18  Per Bothner  <per@bothner.com>

	* gnu/xquery:  New directory.
	* gnu/xquery/lang:  Likewise.
	* gnu/xquery/util:  Likewise.
	* gnu/xquery/testsuite:  Likewise.
	* Makefile.am:  Buld xquery, but only if --enable-xml.

2001-06-17  Per Bothner  <per@bothner.com>

	* Makefile.am (SUBDIRS):  Use automake conditionals for swing.
	Always do commonlisp.

2001-06-09  Per Bothner  <per@bothner.com>

	* Makefile.am (SUBDIRS):  Use automake conditionals for xml.

2001-04-09  Per Bothner  <per@bothner.com>

	* kawa/xml:  Sub-directory moved/renamed to ...
	* xml:  ... new sub-direvtyory/package.
	* Makefile.am (SUBDIRS):  Add xml, though only if --enable-xml.
	* kawa/Makefile.am (SUBDIRS):  Removed xml entry.

2001-03-08  Per Bothner  <per@bothner.com>

	* Makefile.am (SUBDIRS):  Only select commonlisp if Swing is used.
	(This is needed because of broken dependency on jemacs.)

2000-10-12  Per Bothner  <per@bothner.com>
